# pywebview-gui-app

./: README.md  pyproject.toml
