[tool.poetry]
name = "pywebview-gui-app"
version = "0.1.0"
description = ""
authors = ["piyota0901 <piyo.tatsu.0901@gmail.com>"]
readme = "README.md"
packages = [{include = "pywebview_gui_app"}]

[tool.poetry.dependencies]
python = "^3.8"
pywebview = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
